hard-gists/1436671/run.log
=== Docker Run Log for 1436671 ===
Started at: Mi 29. Okt 12:13:55 CET 2025

[2025-10-29 12:13:56] START: Running container for 1436671
[2025-10-29 12:13:56] SUCCESS: Container 0862200de45c126ad246cc2de35db45178a5dd35645e42d590c3c3351b9fe541 started for 1436671
=== Container logs for 1436671 ===
  File "/snippet.py", line 12
    print 'usage speech2text.py filename'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1436671 ===
[2025-10-29 12:13:58] INFO: Container 0862200de45c126ad246cc2de35db45178a5dd35645e42d590c3c3351b9fe541 has stopped
